add github link. add gc image

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -49,7 +49,9 @@
 					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
 				{%- endfor %}
 				</ul>
+
 			</nav>
+			<a class="nav-item" href="https://github.com/sberts">GitHub</a>
 		</header>
 
 		<main id="skip">
