added blog entries

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -39,7 +39,7 @@
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
-			<a href="/" class="home-link">{{ metadata.title }}</a>
+			<a href="/" class="new-link">{{ metadata.title }}</a>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
@@ -51,7 +51,7 @@
 				</ul>
 
 			</nav>
-			<a class="nav-item" href="https://github.com/sberts">GitHub</a>
+			<a class="gh-item" href="https://github.com/sberts">GitHub</a>
 		</header>
 
 		<main id="skip">
