--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -4,8 +4,8 @@ layout: layouts/base.njk
 <!-- Delete this message, it will also remove the component CSS from the bundle -->
 {%- css %}{% include "public/css/message-box.css" %}{% endcss %}
 <div class="message-box">
-	<img src="https://sberts.com/gc1.jpg">
-	<p>Welcome to my personal web site.</p>
+	<img src="/img/netheader.jpg">
+	
 </div>
 <!-- Stop deleting -->
 
