--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,11 +27,11 @@
 		--color-gray-90: #dad8d8;
 
 		/* --text-color is assigned to --color-gray-_ above */
-		--text-color-link: #1493fb;
-		--text-color-link-active: #6969f7;
-		--text-color-link-visited: #a6a6f8;
+		--text-color-link: #20ff20;
+		--text-color-link-active: #40ff40;
+		--text-color-link-visited: #80ff80;
 
-		--background-color: #15202b;
+		--background-color: #101010;
 	}
 }
 
@@ -97,7 +97,7 @@ main :first-child {
 }
 
 header {
-	border-bottom: 1px dashed var(--color-gray-20);
+	border-bottom: 1px dotted var(--color-gray-20);
 }
 header:after {
 	content: "";
@@ -107,7 +107,7 @@ header:after {
 
 .links-nextprev {
 	list-style: none;
-	border-top: 1px dashed var(--color-gray-20);
+	border-top: 1px dotted var(--color-gray-20);
 	padding: 1em 0;
 }
 
@@ -149,6 +149,7 @@ header {
 	flex-wrap: wrap;
 	align-items: center;
 	padding: 1em;
+	
 }
 .home-link {
 	font-size: 1em; /* 16px /16 */
@@ -156,6 +157,15 @@ header {
 	margin-right: 2em;
 }
 .home-link:link:not(:hover) {
+	text-decoration: none;
+}
+.new-link {
+	font-size: 1.1em; /* 16px /16 */
+	font-weight: 700;
+	margin-right: 2em;
+    color:#e0e0e0 !important;
+}
+.new-link:link:not(:hover) {
 	text-decoration: none;
 }
 
@@ -171,6 +181,14 @@ header {
 	margin-right: 1em;
 }
 .nav-item a[href]:not(:hover) {
+	text-decoration: none;
+}
+.gh-item {
+	display: inline-block;
+	margin-right: 1em;
+	text-decoration: none;
+}
+.gh-item a[href]:not(:hover) {
 	text-decoration: none;
 }
 .nav a[href][aria-current="page"] {
