--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -5,7 +5,11 @@ layout: layouts/base.njk
 {%- css %}{% include "public/css/message-box.css" %}{% endcss %}
 <div class="message-box">
 	<img src="/img/netheader.jpg">
-	
+	<p><i>Categories:</i> 
+	<a href="/tags/Linux" class="post-tag">Linux</a>,
+	<a href="/tags/Cloud" class="post-tag">Cloud</a>,
+	<a href="/tags/Networking" class="post-tag">Networking</a>
+	</p>
 </div>
 <!-- Stop deleting -->
 
